WIP to color row RED if player is dead

--- a/src/app/non-secure/mydevices/mydevices.component.html
+++ b/src/app/non-secure/mydevices/mydevices.component.html
@@ -81,7 +81,8 @@
                                 [rows]="team.players"
                                 [columns]="teamScoreColumns"
                                 [columnMode]="'force'"
-                                [rowHeight]="'auto'" >
+                                [rowHeight]="'auto'"
+                                [rowClass]="getRowClass" >
                             </ngx-datatable>
 
                     </div>
