push deviceData back to mydevices.component from map device socketData

--- a/src/app/non-secure/mydevices/mydevices.component.html
+++ b/src/app/non-secure/mydevices/mydevices.component.html
@@ -60,7 +60,7 @@
 
                     <div class="btn-primary btn fb_share" data-href="https://play.skirmesh.net/non-secure/live-games" data-layout="button_count" data-size="small"><a target="_blank" href="{{fbShareUrl}}" class="fb-xfbml-parse-ignore">Share To Facebook!</a></div>
 
-                    <app-map [mapID]="map" [deviceData]="devices"></app-map>
+                    <app-map [mapID]="map" [(deviceData)]="devices"></app-map>
 
 
                 </div>
