allow horizontal scrolling on actions table

--- a/src/app/non-secure/mydevices/mydevices.component.html
+++ b/src/app/non-secure/mydevices/mydevices.component.html
@@ -99,8 +99,9 @@
                         class="material striped"
                         [rows]="allActions"
                         [columns]="allActionsColumns"
-                        [columnMode]="'force'"
-                        [rowHeight]="'auto'" >
+                        [columnMode]="'standard'"
+                        [rowHeight]="'auto'"
+                        [scrollbarH]="true">
                     </ngx-datatable>
 
                 </div>
