--- a/src/app/non-secure/mydevices/mydevices.component.html
+++ b/src/app/non-secure/mydevices/mydevices.component.html
@@ -72,8 +72,9 @@
 
                             <div class="cust_text text-xs-center p-y-1" [style.background-color]="team.color">
 
-                                <h3> {{team.name}} | Team: {{team.score}}pts
-                                                   | Total: {{team.comb_score}}pts </h3>
+                                <h3> {{team.name}} <div style="float:right;">Total: {{team.comb_score}}pts</div>
+                                    <br/> Objective Control: {{team.score}}pts | Team Members: {{team.player_score}}pts
+                                </h3>
                             </div>
 
                             <ngx-datatable
@@ -82,7 +83,8 @@
                                 [columns]="teamScoreColumns"
                                 [columnMode]="'force'"
                                 [rowHeight]="'auto'"
-                                [rowClass]="getRowClass" >
+                                [rowClass]="getRowClass"
+                                [limit]="5" >
                             </ngx-datatable>
 
                     </div>
