--- a/src/app/non-secure/mydevices/mydevices.component.html
+++ b/src/app/non-secure/mydevices/mydevices.component.html
@@ -88,13 +88,13 @@
                             </div>
 
                             <ngx-datatable
+                                style="overflow-y:scroll"
                                 class="material striped"
                                 [rows]="team.players"
                                 [columns]="teamScoreColumns"
                                 [columnMode]="'force'"
                                 [rowHeight]="'auto'"
-                                [rowClass]="getRowClass"
-                                [limit]="5" >
+                                [rowClass]="getRowClass">
                             </ngx-datatable>
 
                     </div>
