--- a/src/app/non-secure/mydevices/mydevices.component.html
+++ b/src/app/non-secure/mydevices/mydevices.component.html
@@ -77,11 +77,13 @@
                             </div>
 
                             <ngx-datatable
+                                style="overflow-y:scroll"
                                 class="material striped"
                                 [rows]="team.players"
                                 [columns]="teamScoreColumns"
                                 [columnMode]="'force'"
-                                [rowHeight]="'auto'" >
+                                [rowHeight]="'auto'"
+                                [rowClass]="getRowClass">
                             </ngx-datatable>
 
                     </div>
