--- a/src/app/non-secure/mydevices/mydevices.component.html
+++ b/src/app/non-secure/mydevices/mydevices.component.html
@@ -66,10 +66,10 @@
                 </div>
                 <div *ngIf="currentTab == 'teamScore'" class="content-panel" id="v-pills-profile" role="tabpanel"
                     aria-labelledby="v-pills-profile-tab">
+                <div class="row">
 
-                    <ngx-charts-bar-horizontal-stacked
-                        [scheme]="barChartColors"
-                        [results]="barChartData"
+                    <ngx-charts-bar-horizontal-stacked  
+                        [results]="barChartData" 
                         [xAxis]="true"
                         [yAxis]="true"
                         [legend]="true"
@@ -77,6 +77,7 @@
                         [yAxisLabel]="yAxisLabel">
                     </ngx-charts-bar-horizontal-stacked>
 
+                </div>
 
                     <div *ngFor="let team of teams" class="team-section">
 
