--- a/src/app/secure/profile/profile.component.html
+++ b/src/app/secure/profile/profile.component.html
@@ -16,19 +16,34 @@
         <div id="profile" class="content-panel">
           <h2 class="title center-cust">Manage Profile</h2>
           <form [formGroup]="profileForm" autocomplete="off" method="PUT" class="form-horizontal">
+
             <fieldset class="fieldset">
+
               <h3 class="fieldset-title">Personal Info</h3>
+
               <div class="form-group avatar">
+
                 <figure class="figure col-md-2">
                   <img id="profileImage" class="img img-responsive" src="{{currentVals.imageData}}"
                     onerror="this.onerror=null" alt="">
                 </figure>
+
                 <div class="form-inline col-md-10 col-sm-9 col-xs-12">
                   <input formControlName="profileImage" (change)="getFile($event)" type="file"
                     class="file-uploader pull-left" accept="image/*">
                   <button type="submit" (click)="saveImage()"
                     class="btn btn-sm btn-primary btn-default-alt pull-left">Update Image</button>
                 </div>
+
+                <div class="row">
+                  <div id="imageUpdateMessage" class="alert alert-primary d-none center-cust">
+                    Image updated!<br>
+                  </div>
+                  <div id="imageUpdateFailedMessage" class="alert alert-danger d-none center-cust">
+                    Image update failed.
+                  </div>
+                </div>
+
               </div>
 
 
@@ -39,6 +54,7 @@
                     placeholder="{{currentVals.firstName}}">
                 </div>
               </div>
+
               <div class="form-group">
                 <label class="col-md-2 col-sm-3 col-xs-12 control-label">Last Name</label>
                 <div class="col-md-10 col-sm-9 col-xs-12">
@@ -103,6 +119,7 @@
               </div>
             </div>
           </form>
+
           <div class="row">
             <div id="userCreatedMessage" class="alert alert-primary d-none center-cust">
               Your profile has been updated!<br>
