--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -61,7 +61,7 @@
 								</div>
 								<div id="callSign" class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
 									<div class="form-group">
-										<input formControlName="callSign" id="userName" type="text" class="form-control"
+										<input formControlName="callSign" type="text" class="form-control"
 											placeholder="Callsign">
 									</div>
 									<div *ngIf="callSign.invalid && (callSign.dirty || callSign.touched) "
@@ -75,7 +75,7 @@
 								<div id="fieldName" style="display: none;"
 									class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
 									<div class="form-group">
-										<input formControlName="fieldName" id="userName" type="text"
+										<input formControlName="fieldName" type="text"
 											class="form-control" placeholder="Field Name">
 									</div>
 									<div *ngIf="fieldName.invalid && (fieldName.dirty || fieldName.touched) "
@@ -166,7 +166,7 @@
 						<div class="center-cust row">
 							By signing up, you agree to our&nbsp;<a [routerLink]="['/non-secure/privacy-policy']"> privacy policy </a>.
 						</div>
-						
+
 					</div>
 				</div>
 			</div>
