--- a/src/app/secure/profile/profile.component.html
+++ b/src/app/secure/profile/profile.component.html
@@ -345,11 +345,11 @@
                         </div>
                       </form>
                       <div>
-                        <div *ngIf="passResetPassed" class="alert alert-primary d-none center-cust">
+                        <div id="passResetPassed" class="alert alert-primary d-none center-cust">
                           Your password is changed<br>
                           <a [routerLink]="['/auth/login']">LOGIN</a>.
                         </div>
-                        <div *ngIf="passResetFailed" class="alert alert-danger d-none center-cust">
+                        <div id="passResetFailed" class="alert alert-danger d-none center-cust">
                           We are sorry we were not able to change your password at this time <br>
                           Please try again or <a [routerLink]="['/non-secure/contact-us']">contact us from our
                             contact us page</a>
