--- a/src/app/auth/sign-in/sign-in.component.html
+++ b/src/app/auth/sign-in/sign-in.component.html
@@ -7,6 +7,18 @@
 
 						<h1>Login</h1>
 
+							<div class="social-button-container">
+								<!-- <div class="top-50 start-50"> -->
+
+								<a (click)="loginWithFacebook()" class="btn btn-md btn-social btn-facebook">
+									<i class="fa fa-facebook fa-fw"> </i> Sign in with Facebook
+								</a>
+								<br/>
+								<a (click)="signInWithGoogle()" class="btn btn-md btn-social btn-google">
+									<img src="https://img.icons8.com/color/64/000000/google-logo.png"> Sign in with Google</a>
+							</div>
+							<br/>
+
 						<form [formGroup]="login" autocomplete="off" method="POST">
 
 							<div class="form-group input-group">
@@ -59,25 +71,7 @@
 								</div>
 							</div>
 							<hr>
-							<div id="or" class="center-cust row">
-								<span>or sign in using</span>
-							</div>
-							<!-- <div class="center-cust row"> -->
-								<div id="social_media" class="row social_icon">
-									<!-- <div class="top-50 start-50"> -->
-									<div (click)="loginWithFacebook()" class="col-xs-4">
-										<a class="btn btn-lg btn-block social_icon">
-											<i class="fa fa-facebook-official"> </i>
-										</a>
-									</div>
 
-									<div (click)="signInWithGoogle()" class="col-xs-4">
-										<a class="btn btn-lg btn-block social_icon">
-											<i class="fa fa-google-plus"> </i>
-										</a>
-									</div>
-								<!-- </div> -->
-							</div>
 						</form>
 					</div>
 				</div>
