--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -120,9 +120,9 @@
 						<div class="actions clearfix">
 
 							<button [disabled]="addUser.invalid" (click)="onSubmit()" type="submit"
-								class="btn cust_skir_signup">
+								class="btn btn-social cust_skir_signup">
 								Signup
-								<i class="fa fa-arrow-right cust_skirmesh_arrow" aria-hidden="true"></i>
+								<i class="fa fa-arrow-right" aria-hidden="true"></i>
 							</button>
 						</div>
 						<div >
@@ -140,17 +140,18 @@
 					<div id="or" class="or">
 						<span>or signup using</span>
 					</div>
-					<div id="social_media" class="row social_icon">
+
+					<div id="social_media" class="social_icon">
 						<!-- <div class="top-50 start-50"> -->
-						<div class="col-xs-4">
-							<a (click)="loginWithFacebook()" class="btn btn-lg btn-block social_icon">
-								<i class="fa fa-facebook-official"></i>
+						<div class="social-button-container">
+							<!-- <div class="top-50 start-50"> -->
+
+							<a (click)="loginWithFacebook()" class="btn btn-md btn-social btn-facebook">
+								<i class="fa fa-facebook fa-fw"> </i> Sign in with Facebook
 							</a>
-						</div>
-						<div (click)="signInWithGoogle()" class="col-xs-4">
-							<a  class="btn btn-lg btn-block social_icon">
-								<i class="fa fa-google-plus"></i>
-							</a>
+							<br/>
+							<a (click)="signInWithGoogle()" class="btn btn-md btn-social btn-google">
+								<img src="https://img.icons8.com/color/64/000000/google-logo.png"> Sign in with Google</a>
 						</div>
 						<!-- <div class="col-xs-4">
 							<a href="#" class="btn btn-lg btn-block social_icon">
