--- a/src/app/global/edit-game/edit-game.component.scss
+++ b/src/app/global/edit-game/edit-game.component.scss
@@ -1,3 +1,10 @@
+.row {
+    padding: 1rem;
+}
+
+.map-container {
+    padding-left: 2rem;
+}
 
   .modal-dialog{
     max-width: 1500px;
@@ -29,15 +36,13 @@
   vertical-align: bottom;
 }
 
-.btn.btn-primary {
-  margin: 1rem 0 0 0;
-}
+
 .btn.btn-secondary {
   margin: 1rem 1rem 0 0;
 }
+
 .btn.btn-primary.keepRight {
   float: right;
-  margin: 0;
 }
 
 .btn.btn-success.cust_btn {
