fix console errors in map component with device data updates

--- a/src/app/secure/start-game/start-game.component.html
+++ b/src/app/secure/start-game/start-game.component.html
@@ -48,7 +48,7 @@
                     <div class="row justify-content-center">
 
                         <div *ngIf="gameBoardActive" class="col-xs">
-                          <app-map [mapID]="selectedGameMode.mapID" [deviceData]="gameData.devices"></app-map>
+                          <app-map [mapID]="selectedGameMode.mapID" [deviceData]="gameData?.devices"></app-map>
                         </div>
 
                         <div class="col-lg">
