add gameID in map component and ignore socketData with wrong gameID

--- a/src/app/non-secure/mydevices/mydevices.component.html
+++ b/src/app/non-secure/mydevices/mydevices.component.html
@@ -30,7 +30,7 @@
                     </p>
 
                     <div>
-                        <app-map [mapID]="gameData.mapID" [deviceData]="gameData.devices"></app-map>
+                        <app-map [mapID]="gameData.mapID" [deviceData]="gameData.devices" [gameID]="gameData.id"></app-map>
                     </div>
 
                 </div>
