--- a/src/app/non-secure/mydevices/mydevices.component.scss
+++ b/src/app/non-secure/mydevices/mydevices.component.scss
@@ -2,9 +2,24 @@
     color: #A00000;
 }
 
-.cust_text{
+.padding-sm {
+    padding: 0.5em;
+}
+
+.padding-xs-x {
+    padding: 0 0.25em;
+}
+
+.font_white{
     color: white;
-    text-shadow: 1px 1px rgba(0,0,0,0.5), -1px 1px rgba(0,0,0,0.5), 1px -1px rgba(0,0,0,0.5), -1px -1px rgba(0,0,0,0.5);
+}
+
+.team_header {
+    opacity: 0.5;
+}
+
+.team_row {
+    opacity: 0.65;
 }
 
 
