--- a/src/app/non-secure/mydevices/mydevices.component.html
+++ b/src/app/non-secure/mydevices/mydevices.component.html
@@ -78,9 +78,7 @@
                             [results]="barChartData"
                             [xAxis]="true"
                             [yAxis]="true"
-                            [legend]="true"
-                            [showYAxisLabel]="showYAxisLabel"
-                            [yAxisLabel]="yAxisLabel">
+                            [legend]="true">
                         </ngx-charts-bar-horizontal-stacked>
 
                     </div>
