bold team names in table header

--- a/src/app/non-secure/mydevices/mydevices.component.html
+++ b/src/app/non-secure/mydevices/mydevices.component.html
@@ -88,8 +88,8 @@
                             <div class="font_white text-xs-center" [style.background-color]="team.color">
 
                                 <h3>
-                                    <div class="team_row row padding-xs-x">
-                                        <div class="col"> {{team.name}}</div>
+                                    <div class="team_row font-weight-bold row padding-xs-x">
+                                        <div class="col "> {{team.name}}</div>
                                         <div class="col keepRight">TOTAL: {{team.comb_score}}pts </div>
                                     </div>
                                     <div class="team_row row padding-xs-x">
