add number of players on each team to header

--- a/src/app/non-secure/mydevices/mydevices.component.html
+++ b/src/app/non-secure/mydevices/mydevices.component.html
@@ -89,7 +89,7 @@
 
                                 <h5>
                                     <div class="team_row font-weight-bold row padding-xs-x">
-                                        <div class="col "> {{team.name}}</div>
+                                        <div class="col "> {{team.name}} ({{team.players.length}})</div>
                                         <div class="col keepRight">TOTAL: {{team.comb_score}}pts </div>
                                     </div>
                                     <div class="team_row row padding-xs-x">
