--- a/src/app/secure/start-game/start-game.component.scss
+++ b/src/app/secure/start-game/start-game.component.scss
@@ -7,10 +7,10 @@ div.main_title {
 }
 
 .btn {
-    padding: 1rem 1.5rem;
+    padding: 1rem 1rem;
     font-weight: bolder;
-    margin: 5px 5px;
-    min-width: 140px;
+    margin: 0.5rem 0.25rem;
+    min-width: 11rem;
 }
 
 .btn:active {
@@ -29,4 +29,18 @@ h1.text-center.pt-3 {
 
 *, ::after, ::before {
     box-sizing: content-box;
+}
+
+
+.btn-timer {
+    padding: 0 1rem;
+    line-height: 3.5rem;
+}
+.btn-timer :first-child {
+    display: inline-block;
+    padding: 0 0 0 1rem;
+    margin: 0 0 0 1rem;
+    font-weight: normal;
+    text-align: center;
+    border-left: 1px solid black;
 }
