--- a/src/app/non-secure/mydevices/mydevices.component.scss
+++ b/src/app/non-secure/mydevices/mydevices.component.scss
@@ -40,8 +40,10 @@
      margin: 10px;
  }
 
-div.view-btn {
-    float: right;
+.view-btn {
+    color: white;
+    background: #802020;
+    border: none;
 }
 
  .center-cust{
