--- a/src/app/secure/start-game/start-game.component.html
+++ b/src/app/secure/start-game/start-game.component.html
@@ -50,7 +50,33 @@
                     <div class="row justify-content-center">
 
                         <div *ngIf="gameBoardActive" class="col-xs">
+
                           <app-map [mapID]="selectedGameMode.mapID" [deviceData]="gameData?.devices" [gameID]="gameData?.id"></app-map>
+
+                          <div *ngFor="let team of teams" class="team-section">
+
+                              <div class="team_header font_white text-xs-center" [style.background-color]="team.color">
+
+                                  <h5>
+                                      <div class="team_row font-weight-bold row padding-xs-x">
+                                          <div class="col "> {{team.name}} ({{team.teamPlayers.length}})</div>
+                                      </div>
+                                  </h5>
+
+                              </div>
+
+                              <!-- <ngx-datatable
+                                  style="overflow-y:scroll"
+                                  class="material striped"
+                                  [rows]="team.teamPlayers"
+                                  [columns]="teamColumns"
+                                  [columnMode]="'force'"
+                                  [rowHeight]="'auto'">
+                              </ngx-datatable> -->
+
+                          </div>
+
+
                         </div>
 
                         <div class="col-lg">
