add quote from KDK

--- a/src/app/non-secure/home/home.component.html
+++ b/src/app/non-secure/home/home.component.html
@@ -81,26 +81,37 @@
     <hr class="featurette-divider">
     <h1 class="center-cust"> People say the darndest things. </h1>
     <!-- Three columns of text below the carousel -->
-    <div class="row">
-      <div class="col-lg-4">
+    <div class="row align-bottom">
+
+      <div class="col-md-3">
         <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="../../../assets/images/swamp_sniper.png" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"/>
 
         <h2>Swamp Sniper</h2>
         <p>"It was so cool and all that stuff."</p>
-      </div><!-- /.col-lg-4 -->
-      <div class="col-lg-4">
+      </div>
+
+      <div class="col-md-3">
         <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="../../../assets/images/ballahack_logo.png" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"/>
 
         <h2>Ballahack Airsoft</h2>
         <p>"Great Product!"</p>
-      </div><!-- /.col-lg-4 -->
-      <div class="col-lg-4">
-        <!-- <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"/> -->
+      </div>
+
+      <div class="col-md-3">
+        <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="../../../assets/images/soldierC.jpg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"/>
 
         <h2>Rob</h2>
         <p>"Its a good thing."</p>
-      </div><!-- /.col-lg-4 -->
-    </div><!-- /.row -->
+      </div>
+
+      <div class="col-md-3">
+        <img class="bd-placeholder-img" width="140" height="140" src="../../../assets/images/KDK_logo.png" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"/>
+
+        <h2>Kyle</h2>
+        <p>"I <b class="censored">censored</b> love this."</p>
+      </div>
+
+    </div>
     <!-- /END THE FEATURETTES -->
 
   </div>
