--- a/src/app/non-secure/home/home.component.scss
+++ b/src/app/non-secure/home/home.component.scss
@@ -17,3 +17,9 @@ slide div p, slide div h3{
     background-color: rgb(255,255,255,0.5);
     border-radius: 0.2rem;
 }
+
+
+.censored {
+    color: #222;
+    background: black;
+}
