--- a/src/app/global/header/header.component.html
+++ b/src/app/global/header/header.component.html
@@ -63,6 +63,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" id="secure_nav_mygame" [routerLink]="['/secure/live-games']">Live Games</a>
+                </li> 
+                <li class="nav-item">
+                    <a class="nav-link" id="secure_nav_pastgame" [routerLink]="['/secure/past-games']">Past Games</a>
                 </li>
             </ul>
 
