--- a/src/app/non-secure/mydevices/mydevices.component.html
+++ b/src/app/non-secure/mydevices/mydevices.component.html
@@ -66,7 +66,7 @@
                         <i class="fa fa-facebook fa-fw"> </i> Share!
                     </a>
 
-                    <app-map [mapID]="map" [(deviceData)]="devices"></app-map>
+                    <app-map [mapID]="map" [(deviceData)]="scoreSvc.devices"></app-map>
 
 
                 </div>
@@ -74,45 +74,7 @@
                 <div *ngIf="currentTab == 'teamScore'" class="content-panel" id="v-pills-profile" role="tabpanel"
                     aria-labelledby="v-pills-profile-tab">
 
-                    <app-team-score [teams]="teams" [barChartData]="barChartData"></app-team-score>
-                    <!-- <div class="row">
-
-                        <ngx-charts-bar-horizontal-stacked
-                            [results]="barChartData"
-                            [xAxis]="true"
-                            [yAxis]="true"
-                            [legend]="true">
-                        </ngx-charts-bar-horizontal-stacked>
-
-                    </div>
-
-                    <div *ngFor="let team of teams" class="team-section">
-
-                            <div class="font_white text-xs-center" [style.background-color]="team.color">
-
-                                <h5>
-                                    <div class="team_row font-weight-bold row padding-xs-x">
-                                        <div class="col "> {{team.name}} ({{team.players.length}})</div>
-                                        <div class="col keepRight">TOTAL: {{team.comb_score}}pts </div>
-                                    </div>
-                                    <div class="team_row row padding-xs-x">
-                                        <div class="col"> Objective Control: {{team.score}}pts </div>
-                                        <div class="col"> Team Members: {{team.player_score}}pts </div>
-                                    </div>
-                                </h5>
-                            </div>
-
-                            <ngx-datatable
-                                style="overflow-y:scroll"
-                                class="material striped"
-                                [rows]="team.players"
-                                [columns]="teamScoreColumns"
-                                [columnMode]="'force'"
-                                [rowHeight]="'auto'"
-                                [rowClass]="getRowClass">
-                            </ngx-datatable>
-
-                    </div> -->
+                    <app-team-score [teams]="scoreSvc.teams" [barChartData]="scoreSvc.barChartData"></app-team-score>
 
                 </div>
 
@@ -124,8 +86,8 @@
 
                     <ngx-datatable
                         class="material striped"
-                        [rows]="allActions"
-                        [columns]="allActionsColumns"
+                        [rows]="scoreSvc.allActions"
+                        [columns]="scoreSvc.allActionsColumns"
                         [columnMode]="'standard'"
                         [rowHeight]="'auto'"
                         [scrollbarH]="true">
@@ -135,12 +97,7 @@
             </div>
 
         </section>
-        <div class="row">
 
+      </div>
 
-
-        </div>
-
-    </div>
-
-</div>
+  </div>
