style changes to game-history

--- a/src/app/secure/game-history/game-history.component.scss
+++ b/src/app/secure/game-history/game-history.component.scss
@@ -10,3 +10,18 @@
     padding: 10px;
     margin: 10px;
 }
+
+.card{
+
+    @media  (max-width: 500px) {
+        width: 90%;
+    }
+    @media  (max-width: 800px) {
+        width: 45%;
+    }
+
+    width: 30%;
+    margin: 1rem 0.5rem;
+    display: inline-block;
+    vertical-align: top;
+}
