--- a/src/app/secure/game-history/game-history.component.html
+++ b/src/app/secure/game-history/game-history.component.html
@@ -1,23 +1,49 @@
-<div class="row">
-    <select class="cust-center col-6 form-control" (change)="changeGameMode($event)">
-        <option disabled selected> -- Select Game Mode -- </option>
-        <option [value]=gameMode.id *ngFor="let gameMode of gameModes">
-            {{gameMode.description}}</option>
+
+<button *ngIf="selectedField" (click)="deSelectField()" class="btn btn-primary">Go Back</button>
+<div class="container-fluid">
+  <div *ngFor="let field of fieldCardData;">
+
+        <div *ngIf="!selectedField || selectedField.id == field.id"
+             class="card user-card">
+
+          <div class="card-header" [innerHtml]="field.name"></div>
+
+          <div class="card-body"
+               [value]="field.id"
+               (click)="selectField(field.id)">
+
+               <div class="col-xs">
+                   <img
+                      class="img img-fluid img-thumbnail"
+                      src="{{field.imageData}}"
+                      onerror="this.onerror=null"
+                      alt=""/>
+               </div>
+
+               <div class="col" [innerHtml]="field.description"></div>
+         </div>
+
+       </div>
+  </div>
+
+
+  <div *ngIf="selectedField" class="row">
+      <select class="cust-center col-6 form-control" (change)="changeGameMode($event)">
+          <option disabled selected> -- Select Game Mode -- </option>
+          <option [value]=config.id *ngFor="let config of selectedField.configs">
+              {{config.description}}</option>
+      </select>
+  </div>
+
+
+  <div *ngIf="selectedMode">
+    <select class="cust-center col form-control" (change)="changeGame($event)">
+        <option disabled selected> -- Select Game -- </option>
+        <option [value]=game.id *ngFor="let game of selectedMode.games">
+            {{game.creationDate.toLocaleString()}} </option>
     </select>
-</div>
+  </div>
 
-<div *ngIf="selectedMode" class="card">
-    <div class="card-header">
-        This Game Config is run at:
-    </div>
-</div>
-
-<div *ngIf="selectedMode">
-  <select class="cust-center col form-control" (change)="changeGame($event)">
-      <option disabled selected> -- Select Game -- </option>
-      <option [value]=game.id *ngFor="let game of selectedMode.games">
-          {{game.creationDate.toLocaleString()}} </option>
-  </select>
 </div>
 
 <div class="row">
