--- a/src/app/secure/game-history/game-history.component.scss
+++ b/src/app/secure/game-history/game-history.component.scss
@@ -13,12 +13,12 @@
 
 .card{
 
-    @media  (max-width: 500px) {
-        width: 90%;
-    }
-    @media  (max-width: 800px) {
-        width: 45%;
-    }
+    // @media  (max-width: 500px) {
+    //     width: 90%;
+    // }
+    // @media  (max-width: 800px) {
+    //     width: 45%;
+    // }
 
     width: 30%;
     margin: 1rem 0.5rem;
